[project]
name = "kaggle-brain-to-text-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "h5py>=3.15.1",
    "kaggle>=1.8.3",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
